// Generated by sylk.build
syntax = "proto3";

package sylklabs.scheduler.v1;



import "sylklabs/core/task.proto";

service SchedulerWorkerService {
	rpc Communicate (stream sylklabs.scheduler.v1.WorkerMessage) returns (stream sylklabs.scheduler.v1.SchedulerMessage);
}

message RegistrationRequest {

	string worker_id = 1;
	repeated string supported_tasks = 2;
}

message AssignTaskRequest {

	sylklabs.core.Task task = 1;
}

message WorkerMessage {

	oneof worker_message_type {
		sylklabs.scheduler.v1.RegistrationRequest registration = 1;
	};
}

message SchedulerMessage {

	oneof scheduler_message_type {
		sylklabs.scheduler.v1.AssignTaskRequest assign_task = 1;
	};
}